Actualización antes del final
