# PROYECTO/src/routes/booking.js
@@ -3,13 +3,12 @@ const express = require('express');
 const router = express.Router();
 
 const {
-  getAllBookings, createBooking, acceptBooking, cancelBooking, deleteBooking,
+  getAllBookings, acceptBooking, cancelBooking, deleteBooking,
   getBookingByStatus, getBookingById, changeDateBooking,
 } = require('../controllers/booking');
 
 const { authMiddleware } = require('../middleware/auth-middleware');
 const { itsMe } = require('../middleware/auth-middleware');
-const { upload } = require('../middleware/multer-middleware');
 
 // ADMIN
 router.get('', authMiddleware, itsMe, getAllBookings);
@@ -21,9 +20,5 @@ router.delete('/:id', authMiddleware, itsMe, deleteBooking);
 
 // CLIENT
 router.get('/client/:id', authMiddleware, getBookingById);
-
-router.post('/upload', upload.single('myFile'), createBooking, (req, res) => {
-  res.json({ message: 'Archivo subido exitosamente' });
-});
 
 module.exports = router;
