# PROYECTO/src/routes/index.js
@@ -2,20 +2,27 @@ const express = require('express');
 
 const router = express.Router();
 
-const { rootController } = require('../controllers');
-
+// const { rootController } = require('../controllers');
 const AdminRouter = require('./admin');
 const UserRouter = require('./user');
 const BookingRouter = require('./booking');
 const smtpController = require('../controllers/smtp');
 // const { jwtAuth } = require('../middleware/auth-middleware');
 const { createUser } = require('../controllers/user');
+const { createBooking } = require('../controllers/booking');
 const LoginController = require('../controllers/loginController');
 const adminAuth = require('../middleware/admin-middleware');
 
-router.post('/', rootController);
+const { upload } = require('../middleware/multer-middleware');
+
+// router.post('/', rootController);
 router.post('/login', LoginController.logIn);
 router.post('/signin', createUser);
+
+router.post('/createBooking', upload.single('myFile'), createBooking, (req, res) => {
+  res.json({ message: 'Archivo subido exitosamente' });
+});
+
 // router.use(jwtAuth);
 router.use('/admin', adminAuth, AdminRouter);
 router.use('/users', UserRouter);
